angular app done

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -978,3 +978,50 @@ footer {
 .star {
     padding-left: 7px;
 }
+
+.breadcrumb {
+    margin-bottom: 0px;
+    padding: 0px 0px;
+}
+
+#admin {
+    margin-bottom: 20px;
+    .nav {
+        font-size: 14px;
+        a {
+            color: #444;
+        }
+        span.badge {
+            margin-left: 10px;
+        }
+    }
+    .tab-pane {
+        padding: 15px;
+        border: 1px solid #ddd;
+        margin-top: -1px;
+        background-color: #fff;
+    }
+}
+
+form.form-horizontal {
+    margin: 10px 0 0px;
+    .form-group {
+        border-top: 1px dashed #ddd;
+        margin-bottom: 1px;
+        padding: 12px 0;
+        label {
+            color: #444;
+        }
+        &:hover {
+            background-color: #f5f5f5;
+            label {
+                color: #000;
+            }
+        };
+    }
+    input {
+        padding: 5px;
+        box-shadow: none !important;
+        border-color: #ddd;
+    }
+}
