--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -11,43 +11,59 @@ block content
                 a(href="#board",data-toggle="tab")
                     i.icon-hdd
                     |板块管理
-            li
+                    span.badge.pull-right #{boards.length}
+            li.active
                 a(href="#user",data-toggle="tab")
                     i.icon-user
                     |用户管理
-                    span.badge.pull-right 123
-            li.active
+                    span.badge.pull-right #{users.length}
+            li
                 a(href="#setting",data-toggle="tab")
                     i.icon-gears
                     |站点设置
         .tab-content
             #home.tab-pane
-                .dash #{site.name} 生于 #{site.created}
+                .dash #{config.name} 生于 #{config.created}
             #board.tab-pane 
-            #user.tab-pane 123
-            #setting.tab-pane.active(ng-controller="candy.ctrlers.admin.setting")
+            #user.tab-pane.active
+                .list-group
+                    - if (users)
+                        - each user in users
+                            .list-group-item.user.clearfix(data-id="#{user.id}")
+                                - if (user.avatar)
+                                    img.pull-left.avatar.thumbnail(src="#{user.avatar}")
+                                span.name
+                                    - if (user.url)
+                                        a(href="#{user.url}",target="_blank") #{user.nickname ? user.nickname : user.duoshuo.user_id}
+                                    - else
+                                        |#{user.nickname ? user.nickname : user.duoshuo.user_id}
+                                span.type
+                                    |#{user.type}
+                                span.threads
+                                    |#{user.threads.length}
+            #setting.tab-pane(ng-controller="candy.ctrlers.admin.setting")
                 form(name="updateSetting").form-horizontal
                     .form-group
                         label.col-lg-2.control-label 网站名称
                         .col-lg-6
-                            input(type="text",ng-model="setting.name",ng-init="setting.name='#{site.name}'").form-control
+                            input(type="text",ng-model="setting.name",ng-init="setting.name='#{config.name}'").form-control
                     .form-group
                         label.col-lg-2.control-label 网站描述
                         .col-lg-6
-                            input(type="text",ng-model="setting.desc",ng-init="setting.desc='#{site.desc}'").form-control
+                            input(type="text",ng-model="setting.desc",ng-init="setting.desc='#{config.desc}'").form-control
                     .form-group
                         label.col-lg-2.control-label 网站地址
                         .col-lg-6
-                            input(type="text",ng-model="setting.url",ng-init="setting.url='#{site.url}'").form-control
+                            input(type="text",ng-model="setting.url",ng-init="setting.url='#{config.url}'").form-control
                     .form-group
                         label.col-lg-2.control-label 多说站名
                         .col-lg-6
-                            input(type="text",ng-model="setting.duoshuo.short_name",ng-init="setting.duoshuo.short_name='#{site.duoshuo.short_name}'").form-control
+                            input(type="text",ng-model="setting.duoshuo.short_name",ng-init="setting.duoshuo.short_name='#{config.duoshuo.short_name}'").form-control
                     .form-group
                         label.col-lg-2.control-label 多说 secret
                         .col-lg-6
-                            input(type="text",ng-model="setting.duoshuo.secret",ng-init="setting.duoshuo.secret='#{site.duoshuo.secret}'").form-control
-                    input(type="hidden",ng-model="setting._id",ng-init="setting._id='#{site.id}'")
+                            input(type="text",ng-model="setting.duoshuo.secret",ng-init="setting.duoshuo.secret='#{config.duoshuo.secret}'").form-control
+                    input(type="hidden",ng-model="setting._id",ng-init="setting._id='#{config.id}'")
                     .form-group
                         .col-lg-offset-2.col-lg-10
                           a(href="javascript:void(0);",ng-click="update()").btn.btn-success
