--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1000,10 +1000,13 @@ form.form-horizontal {
             }
         };
     }
-    input {
+    input,textarea {
         padding: 5px;
         box-shadow: none !important;
         border-color: #ddd;
+    }
+    textarea {
+        height: 150px;
     }
 }
 
@@ -1041,6 +1044,22 @@ form.form-horizontal {
             }
         }
     }
+    #board {
+        .form-group {
+            border: 0;
+        }
+        .accordion-inner {
+            border: 0px;
+            margin: 0;
+        }
+        .accordion-heading {
+            background-color: #f5f5f5;
+            margin-bottom: 0;
+            a {
+
+            }
+        }
+    }
 }
 
 .thumbnail() {
@@ -1049,4 +1068,12 @@ form.form-horizontal {
     margin-right: 8px;
     .br(3px);
     .bs();
+}
+
+.no {
+    text-align: center;
+    color: #999;
+    font-size: 16px;
+    margin-left: -15px;
+    margin-right: -15px;
 }
