--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,23 @@ html(ng-app="candy")
   head
     meta(name="viewport",content="width=device-width, initial-scale=1.0")
     title #{site.name}
+    link(rel='shortcut icon',type="image/x-icon",href="/images/favicon.ico")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block header
+        .bar.clearfix
+            .c1
+            .c2
+            .c3
+            .c4
+            .c5
+            .c6
+            .c7
+            .c8
+            .c9
+            .c10
+            .c11
+            .c12
         header
             #ihd.container.clearfix
                 .row
