--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -310,55 +310,37 @@ header {
 }
 
 .banner {
-    background: #fff url('/images/banner.png') left top;
+    background: #fff url('/images/wallpaper/geometry.png') left top;
     width: 100%;
     border-bottom: 1px solid #ddd;
     box-shadow: 0px 1px 5px #ddd;
     .inner {
-        padding: 12px 0;
-        div {
-            
-        }
+        padding: 10px 0;
         .title {
             font-size: 18px;
             font-weight: normal;
             color: #444;
-            margin: 10px 0;
+            margin-top: 20px;
+            margin-bottom: 15px;
             text-shadow: 1px 1px 1px #ddd;
         }
         .desc {
             font-size: 14px;
             color: #999;
             text-shadow: 1px 1px 1px #efefef;
-        }
-    }
-    .dl-links {
-        a {
-            display: block;
-            padding: 10px 12px;
-            margin-bottom: 6px;
-            font-size: 14px;
-            color: #444;
-            padding-left: 50px;
-            span {
-                display: block;
-                font-size: 12px;
-                color: #999;
-            }
-            &:hover {
-                background-color:#ddd;
+            p {
+                line-height: 1.2;
+                margin-bottom: 10px;
             }
         }
     }
-    .wp-theme {
-        background: url('../images/wp.png') no-repeat 10px center;
+    .social {
+        .side-cnt {
+            ul {
+                margin-bottom: 0;
+            }
+        }
     }
-    .ver-node {
-        background: url('../images/nodejs.png') no-repeat 10px center;
-    }
-}
-.wb-share {
-    margin: 20px 0 0;
 }
 /* Content */
 
