--- a/views/layout.jade
+++ b/views/layout.jade
@@ -29,6 +29,7 @@ html(ng-app="candy")
                             a(href="/") #{site.name}
                                 span.desc #{site.desc}
     block banner
+        include banner
     article#cnt
         #icnt.container.clearfix
           .row
