--- a/views/index.jade
+++ b/views/index.jade
@@ -1,15 +1,5 @@
 extends layout
 
-//- block banner
-//-    .banner.clearfix
-//-         .inner.clearfix.container
-//-            .row
-//-                 .col-lg-9
-//-                     h2.title 唾手即得，只若初见。
-//-                     .desc 为你的博客提供社会化论坛体验，从未如此简单。
-//-                 .col-lg-3
-//-                     .dl-links
-
 block content
      .main-board.board.index-board
         - each board in boards
@@ -17,7 +7,7 @@ block content
                 .col-lg-3
                   .brief
                     h3.name 
-                        a(href="/board/#{board.url}") #{board.title}
+                        a(href="/board/#{board.url}") #{board.name}
                         span.meta
                             i.icon-star.first
                             |345
@@ -28,6 +18,7 @@ block content
                     .desc #{board.desc}
                 .col-lg-9
                   ul.threads.clearfix
+                    - if (thread)
                     - each thread,i in board.threads
                      - if (i <= 5)
                         li.clearfix.thread-title #{thread.title}
